sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:7: error: not found: value j
				if(getValeur(j)>getValeur(j+1)){echange(j,j+1); f = false}
                                             ^AlgCocktailSort1:7: error: not found: value j
				if(getValeur(j)>getValeur(j+1)){echange(j,j+1); f = false}
                                                                        ^AlgCocktailSort1:15: error: not found: value j
				if(getValeur(j)>getValeur(j+1)){echange(j,j+1); f = false}
                                             ^AlgCocktailSort1:15: error: not found: value j
				if(getValeur(j)>getValeur(j+1)){echange(j,j+1); f = false}
                                                                        ^