sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {

		for(i<- 0 to getNombreValeurs - 2){
			var f = true
			
				if(getValeur(j)>getValeur(j+1)){echange(j,j+1); f = false}
			
			if(f == true){return()}
		}
		
		for(i<- getNombreValeurs - 2 to 0 by -1){
			var f = true
			
				if(getValeur(j)>getValeur(j+1)){echange(j,j+1); f = false}
			
			if(f == true){return()}
		}
	
}
